--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mvc-todo",
+  "name": "sprint-3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2",
-    "nodemon": "^2.0.21"
+    "mongoose": "^6.9.1",
+    "nodemon": "^2.0.20"
   }
 }
